--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="dropdowna" href="#valphp">Validierung von PHP</a>
                         <a class="dropdowna" href="#unterschied">Unterschied zwischen javascript und php</a>
                         <a class="dropdowna" href="#javaskripttext">Javaskript (JS)</a>
-                        <a class="dropdowna" href="#datentypen">Datentypen</a>
+                        <a class="dropdowna" href="#javascriptbegriffe">Javascript Begriffe</a>
                         <a class="dropdowna" href="#funktion">Funktionen/Operatoren</a>
                         <a class="dropdowna" href="#joins">Joins</a>
                         <a class="dropdowna" href="#import">Daten Imoprtieren</a>
@@ -494,10 +494,38 @@
                 auch auf der HTML-Seite zwischen &lt;script&gt;- und &lt;/script&gt;-Tags sehen. (Es ist allerdings
                 besser, ihn in einer eigenen Datei unterzubringen.) Grunds&auml;tzlich muss der &lt;script&gt;-Tag kurz
                 vor dem End-Tags des Bodys stehen.</p>
-            <p class="code" data-aos="flip-up" data-aos-duration="1000"><span class="grau">&lt;</span><span class="blau">script&nbsp;</span><span
-                    class="hellblau">src</span>=<span class="orange">"script.js"</span><span
-                    class="grau">&gt;&lt;/</span><span class="blau">script</span><span class="grau">&gt;</span><span
-                    class="grau"><br>&lt;/</span><span class="blau">body</span><span class="grau">&gt;</span></p>
+            <p class="code" data-aos="flip-up" data-aos-duration="1000"><span class="grau">&lt;</span><span
+                    class="blau">script&nbsp;</span><span class="hellblau">src</span>=<span
+                    class="orange">"script.js"</span><span class="grau">&gt;&lt;/</span><span
+                    class="blau">script</span><span class="grau">&gt;</span><span class="grau"><br>&lt;/</span><span
+                    class="blau">body</span><span class="grau">&gt;</span></p>
+        </div>
+        <div class="style1" data-aos="flip-up" data-aos-duration="1000" id="javascriptbegriffe">
+            <h1>Javascript Begriffe</h1>
+            <hr>
+            <p> <b>Variablen: <br> <br></b>
+                Mit Variablen können Werte sowie Strings zwischengespeichert werden. Dies ist eine sehr nützliche
+                Funktion. Eine Variable kann Definiert werden, dann kann ihr später einen Wert zugewiesen werden. Diese
+                Schritte können aber auch zusammen gemacht werden. Im Beispiel wird zuerst die Variable definiert, dann
+                wird ihr ein Wert gegeben. Die zweite Variable ist alles in einem Schritt, bei der dritten Variable
+                werden die ersten beiden zusammengezählt und bei der vierten wird ein String eingespeichert, ein String
+                ist eine Abfolge von Zeichen. Variablennamen dürfen nicht mit einer Zahl beginnen.</p>
+            <p class="code" data-aos="flip-up" data-aos-duration="1000">
+                var&nbsp;eins;<br />eins&nbsp;=&nbsp;1;<br>
+                var&nbsp;zwei&nbsp;=&nbsp;2;<br>
+                var&nbsp;drei&nbsp;=&nbsp;eins&nbsp;+&nbsp;zwei;<br>
+                var&nbsp;text&nbsp;=&nbsp;"Ich bin ein String";<br>
+            </p>
+            <p><b>Arrays</b> <br> <br>
+                Ein Array ist eine Liste aus mehreren Werten. Arrays werden wie Variablen definiert, nur dass alle Werte
+                durch Komma getrennt in [ ] Klammern geschrieben werden. Sollen diese Arrays ausgegeben werden, kann
+                dies gleich wie bei einer Variable gemacht werden. Muss eine bestimmte Stelle eines Arrays ausgeben, so
+                kann die Stelle in [ ] Klammern gesetzt werden. Hier muss beachtet werden, dass die Nummerierung mit 0
+                beginnt.</p>
+            <p class="code" data-aos="flip-up" data-aos-duration="1000">
+                var&nbsp;array1&nbsp;= [1,&nbsp;2,&nbsp;3,&nbsp;4,&nbsp;5];<br>
+                var&nbsp;array2&nbsp;= ["Hallo",&nbsp;"Welt"];<br>
+            </p>
         </div>
 
 
