--- a/index.html
+++ b/index.html
@@ -526,6 +526,22 @@
                 var&nbsp;array1&nbsp;= [1,&nbsp;2,&nbsp;3,&nbsp;4,&nbsp;5];<br>
                 var&nbsp;array2&nbsp;= ["Hallo",&nbsp;"Welt"];<br>
             </p>
+            <p><b>Objekte</b> <br> <br>
+                Ein Objekt fasst mehrere Variablen, Arrays und Funktionen zu einem Modell zusammen. In Objekten werden
+                neue Schreibweisen für Variablen verwendet. Am besten lässt sich das mit einem Beispiel zeigen, lassen
+                Sie sich aber nicht verwirren wegen der Funktion am Schluss, Funktionen werden unter Funktionen
+                angesprochen. Das Beispiel wird auf ein Hotel angewendet.Objekte können auch bearbeitet werden, wie eine
+                Variable mit hotel.name oder mit hotel['name']:</p>
+            <p class="code" data-aos="flip-up" data-aos-duration="1000">
+                var hotel = {<br>
+                    name: "Quay",<br>
+                    rooms: 40,<br>
+                    booked: 25,<br>
+                    gym: true,<br>
+                    roomTypes: ["einzel", "doppel", "suite"]<br>
+                    };<br>
+                    
+            </p>
         </div>
 
 
