--- a/index.html
+++ b/index.html
@@ -534,14 +534,50 @@
                 Variable mit hotel.name oder mit hotel['name']:</p>
             <p class="code" data-aos="flip-up" data-aos-duration="1000">
                 var hotel = {<br>
-                    name: "Quay",<br>
-                    rooms: 40,<br>
-                    booked: 25,<br>
-                    gym: true,<br>
-                    roomTypes: ["einzel", "doppel", "suite"]<br>
-                    };<br>
-                    
+                name: "Quay",<br>
+                rooms: 40,<br>
+                booked: 25,<br>
+                gym: true,<br>
+                roomTypes: ["einzel", "doppel", "suite"]<br>
+                };<br>
+
             </p>
+            <p><b>Funktionen</b> <br> <br>
+                Mit Funktionen kann Code ausgelagert werden, welcher viele Male verwendet wird. Funktionen werden mit
+                function fname(Parameter) {Inhalt der Funktion}. Der Inhalt ist der Code, welcher beim Verwenden der
+                Funktion ausgeführt werden soll. In die Klammern können Parameter eingesetzt werden, mit welchen man in
+                der Funktion arbeiten kann. Ich persönlich finde, dass in folgendem Link sehr gut erklärt wird, wie und
+                wo man Funktionen einsetzt:</p>
+            <button class="linkbutton"><a href="https://www.html-seminar.de/javascript-funktionen.htm">Mehr über
+                    Funktionen</a></button>
+            <br> <br>
+
+
+
+            <p><b>Schleifen</b> <br> <br>
+                Schleifen sind ein einfaches Werkzeug, um einzelne Schritte wiederholt auszuführen. In folgendem Link
+                wird erklärt wie Schleifen eingesetzt werden und welche Arten von Schleifen es gibt:</p>
+            <button class="linkbutton"><a href="https://wiki.selfhtml.org/wiki/JavaScript/Schleife">Mehr über
+                    Schleifen</a></button> <br> <br>
+
+
+            <p><b>Bedingungen</b> <br> <br>
+                Mit Bedingungen sind die if-Befehle gemeint. In folgendem Link werden diese erläutert:</p>
+            <button class="linkbutton"><a href="https://www.w3schools.com/js/js_if_else.asp">W3schools
+                    if-Bedingung</a></button> <br> <br> <br> <br> 
+
+
+                <h2>Formulare mit JS Validieren</h2>
+            <p>JavaScript pr&uuml;ft Formulare, um dem Benutzer und dem Programmierer das l&auml;stige Hin- und Her
+                zwischen der Anwendung auf dem Server und dem Browser zu ersparen.</p>
+            <ul>
+                <li> <span class="color">Sind alle erforderlichen Felder ausgef&uuml;llt?</span></li>
+                <li> <span class="color">Haben wir eine valide Emailadresse?</span></li>
+                <li> <span class="color">Liegt ein Datum vor?</span></li>
+                <li> <span class="color">Ist die Eingabe in diesem Feld eine Zahl?</span></li>
+            </ul>
+            <p>In folgendem Link wird erkl&auml;rt, wie man eine Validierung durch JavaScript erreicht:</p>
+
         </div>
 
 
