--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="dropdowna" href="#javaskripttext">Javaskript (JS)</a>
                         <a class="dropdowna" href="#jsbegriffs">Javascript Begriffe</a>
                         <a class="dropdowna" href="#jquery">Jquery</a>
-                        <a class="dropdowna" href="#joins">Joins</a>
+                        <a class="dropdowna" href="#jereigniss">Jquery Ereignisse</a>
                         <a class="dropdowna" href="#import">Daten Imoprtieren</a>
                         <a class="dropdowna" href="#northwind">Northwind</a>
                         <a class="dropdowna" href="#glossar">Glossar</a>
@@ -604,6 +604,11 @@
                         &nbsp;
                         </p>
 
+        </div>
+        <div class="style1" id="jereigniss">
+            <h1>Jquery Ereignisse</h1>
+            <hr>
+            <p></p>
         </div>
 
 
