--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 ablaufen und somit die Clients weniger effektive Rechenleistung auf ihrem Gerät vorweisen müssen.
                 Ursprünglich war PHP nur eine Ansammlung von Perl-Skripten, die Rasmus Lerdorf 1995 entwickelt hat, um
                 seinen Online-Lebenslauf zu schreiben. Heute gilt dieser als Entwickler von PHP.</p>
-            <img src="bilder/php-1.png" alt="php" id="elefant">
+            <img src="bilder/php-1.png" alt="php" class="elefant">
 
         </div>
         <div class="style1" id="phpsyntax">
@@ -599,16 +599,24 @@
                 Um jQuery benutzen zu können, muss es wie JavaScript eingebunden werden, jedoch als absolute URL. Es
                 gibt im Internet verschiedene jQuery-Anbieter. Am besten gibt man "jQuery CDN" in der Suchleiste ein und
                 klickt auf den ersten Link. Dort wird erklärt, wie man jQuery ins HTML einbindet.</p>
-                <p class="code">
-                        &lt;head&gt <br>&lt;script&nbsp;src="http://code.jquery.com/jquery-3.3.1.min.js"&gt;&lt;/script&gt;<br> &lt/head&gt;
-                        &nbsp;
-                        </p>
+            <p class="code">
+                &lt;head&gt <br>&lt;script&nbsp;src="http://code.jquery.com/jquery-3.3.1.min.js"&gt;&lt;/script&gt;<br>
+                &lt/head&gt;
+                &nbsp;
+            </p>
+            <img src="bilder/0_g3ns8QALNBBH7CBA_.gif" alt="ok" class="elefant">
 
         </div>
         <div class="style1" id="jereigniss">
             <h1>Jquery Ereignisse</h1>
             <hr>
-            <p></p>
+            <p>Ereignisse brauchen Sie dann, wenn ein Besucher mit Ihrer Seite interagieren kann. Also wenn er zum
+                Beispiel auf einen Knopf drückt, soll ihm eine Meldung angezeigt werden, dass er auf den Knopf gedrückt
+                hat. In jQuery lassen sich diese sogenannten Events mit der ".on" Methode aufrufen z.B.
+                $("h1").on("click", function(){});. An der Stelle von "click" können zahlreiche Eventtypen stehen die
+                wichtigsten von ihnen sind blur, hover, focus und click. In folgendem Link sehen Sie eine Liste mit
+                allen jQuery-Events:</p>
+                <button class="linkbutton"><a href="https://api.jquery.com/category/events/"> Jquery Event list: </a></button> <br> <br>
         </div>
 
 
