--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="dropdowna" href="#jsbegriffs">Javascript Begriffe</a>
                         <a class="dropdowna" href="#jquery">Jquery</a>
                         <a class="dropdowna" href="#jereigniss">Jquery Ereignisse</a>
-                        <a class="dropdowna" href="#import">Daten Imoprtieren</a>
+                        <a class="dropdowna" href="#management">Projekt Management</a>
                         <a class="dropdowna" href="#northwind">Northwind</a>
                         <a class="dropdowna" href="#glossar">Glossar</a>
                     </div>
@@ -616,7 +616,85 @@
                 $("h1").on("click", function(){});. An der Stelle von "click" können zahlreiche Eventtypen stehen die
                 wichtigsten von ihnen sind blur, hover, focus und click. In folgendem Link sehen Sie eine Liste mit
                 allen jQuery-Events:</p>
-                <button class="linkbutton"><a href="https://api.jquery.com/category/events/"> Jquery Event list: </a></button> <br> <br>
+            <button class="linkbutton"><a href="https://api.jquery.com/category/events/"> Jquery Event list:
+                </a></button> <br> <br>
+        </div>
+        <div class="style1" id="management">
+            <h1>Projekt Management</h1>
+            <hr>
+            <p>Die beiden Projekt-Management-Methoden SCRUM und Kanban sind die zwei Hauptmethoden in der
+                Programmierung. Bei beiden Methoden werden alle Tätigkeiten für das Projekt auf Kärtchen geschrieben.
+            </p>
+
+            <div>
+                <h3>SCRUM</h3>
+                <ul>
+                    <li>Scrum Teams arbeiten in Sprint-Serien, die normalerweise ca. 2 Wochen dauern.</li>
+                    <li>Jeder Sprint startet mit einem Meeting, bei dem alle T&auml;tigkeiten f&uuml;r das Projekt
+                        festgelegt werden.</li>
+                    <li>Jeden Tag gibt es noch ein Meeting, um den aktuellen Stand zu besprechen. Diese dauern sehr
+                        kurz.</li>
+                    <li>Zum Schluss gibt es noch ein Meeting um das Projekt revuepassierenzulassen.</li>
+                </ul>
+                <h3>KANBAN</h3>
+                <ul>
+                    <li>Kanban ist ein kontinuierlicher Prozess.</li>
+                    <li>T&auml;tigkeiten werden direkt vom Product Backlog "gepullt".</li>
+                    <li>Jede Spalte hat eine strikte maximale Bearbeitungszeit.</li>
+                    <li>Ab und zu werden neue Funktionen den Interessengruppen vorgestellt.</li>
+                    <li>Auch hier gibt es zum Schluss gibt es noch ein Meeting um das Projekt revuepassierenzulassen.
+                    </li>
+                </ul>
+                <h3>TESTPROTOKOLL</h3>
+                <p>Wenn die Webseite fertiggestellt ist, sollte man Sie mit m&ouml;glichst vielen Browsern und
+                    Ger&auml;ten auf alle Funktionen testen. Zum Gl&uuml;ck gibt es HERMES, von dem man jegliche
+                    Vorlagen herunterladen kann, auch f&uuml;r ein Testprotokoll:</p>
+            </div>
+            <div>&nbsp;</div>
+            <button class="linkbutton"><a
+                    href="https://ninotkalec.github.io/lerndokumentation307/downloads/testprotokoll.docx"> Test
+                    Protokoll
+                </a></button> <br> <br>
+
+
+
+        </div>
+        <div id="glossar" class="style">
+            <h1>Glossar</h1>
+            <hr>
+            <table>
+                <tbody>
+                    <tr>
+                        <th>Begriff</th>
+                        <th>Beschreibung</th>
+                    </tr>
+                    <tr>
+                        <td>DOM</td>
+                        <td>Document Object Model</td>
+                    </tr>
+                    <tr class="grey">
+                        <td>Syntax</td>
+                        <td>Regel f&uuml;r die Struktur eines Programmcodes</td>
+                    </tr>
+                    <tr>
+                        <td>XSS</td>
+                        <td>Cross Site Scripting</td>
+                    </tr>
+                    <tr class="grey">
+                        <td>jQuery</td>
+                        <td>JavaScript-Bibliothek</td>
+                    </tr>
+                    <tr>
+                        <td>Loop</td>
+                        <td>Schleife</td>
+                    </tr>
+                    <tr class="grey">
+                        <td>Validierung</td>
+                        <td>&Uuml;berpr&uuml;fung der Eingegebenen Werte in einem Formular</td>
+                    </tr>
+                </tbody>
+            </table>
+
         </div>
 
 
